Fixes spacing issue with email address length on mobile.

--- a/wp-content/themes/specular/custom_templates/contact_us.css
+++ b/wp-content/themes/specular/custom_templates/contact_us.css
@@ -53,4 +53,9 @@
     width: 100%;
     margin: 0 auto 2em auto;
   }
+
+  .contact-info-list { 
+    padding-left: 12px;
+  }
+
 }
